--- a/Shopper2019.Test/Shopper2019.Test.csproj
+++ b/Shopper2019.Test/Shopper2019.Test.csproj
@@ -5,6 +5,20 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="xunit" Version="2.4.1" />
+    <PackageReference Include="xunit.assert" Version="2.4.1" />
+    <PackageReference Include="xunit.core" Version="2.4.1" />
+    <PackageReference Include="xunit.runner.console" Version="2.4.1">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.1">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Shopper2019.CurrencyRate\Shopper2019.CurrencyRate.csproj" />
     <ProjectReference Include="..\Shopper2019.DigitRecognizer\Shopper2019.DigitRecognizer.csproj" />
     <ProjectReference Include="..\Shopper2019.Documents\Shopper2019.Documents.csproj" />
