--- a/Shopper2019_Test/Shopper2019.Test.csproj
+++ b/Shopper2019_Test/Shopper2019.Test.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{46BDC96D-38C8-4555-8226-9C790A902C87}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Shopper2019_Test</RootNamespace>
-    <AssemblyName>Shopper2019_Test</AssemblyName>
+    <RootNamespace>Shopper2019.Test</RootNamespace>
+    <AssemblyName>Shopper2019.Test</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
