--- a/Shopper2019_Test/Shopper2019.Test.csproj
+++ b/Shopper2019_Test/Shopper2019.Test.csproj
@@ -82,6 +82,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GrossPriceProcessor_Test.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
