--- a/Shopper2019_Test/Shopper2019.Test.csproj
+++ b/Shopper2019_Test/Shopper2019.Test.csproj
@@ -83,6 +83,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="GrossPriceProcessor_Test.cs" />
+    <Compile Include="MockSaleItem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TotalPriceValueProcessor_Test.cs" />
   </ItemGroup>
