--- a/Shopper2019_Test/Shopper2019.Test.csproj
+++ b/Shopper2019_Test/Shopper2019.Test.csproj
@@ -99,6 +99,7 @@
     <Compile Include="MockSaleItem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SaleItemProcessor_Test.cs" />
+    <Compile Include="SaleListItemProcessor_Test.cs" />
     <Compile Include="TotalPriceValueProcessor_Test.cs" />
   </ItemGroup>
   <ItemGroup>
