--- a/Shopper2019.UI/App.config
+++ b/Shopper2019.UI/App.config
@@ -1,11 +1,19 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <configSections>
     </configSections>
     <connectionStrings>
-        <add name="Shopper2019.UI.Properties.Settings.Shopper2019DbConnectionString" connectionString="Data Source=LAPTOP\SQLEXPR;Initial Catalog=Shopper2019Db;Persist Security Info=True;User ID=sa;Password=12trzy" providerName="System.Data.SqlClient"/>
+        <add name="Shopper2019.UI.Properties.Settings.Shopper2019DbConnectionString" connectionString="Data Source=LAPTOP\SQLEXPR;Initial Catalog=Shopper2019Db;Persist Security Info=True;User ID=sa;Password=12trzy" providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1"/>
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="Autofac" publicKeyToken="17863af14b0044da" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.9.4.0" newVersion="4.9.4.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
