--- a/Shopper2019_Test/packages.config
+++ b/Shopper2019_Test/packages.config
@@ -1,6 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Autofac" version="4.9.4" targetFramework="net461" />
+  <package id="Autofac.Extensions.DependencyInjection" version="5.0.1" targetFramework="net461" />
   <package id="Castle.Core" version="4.4.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="2.1.0" targetFramework="net461" />
   <package id="Microsoft.NETCore.Platforms" version="3.0.0" targetFramework="net461" />
   <package id="Moq" version="4.13.1" targetFramework="net461" />
   <package id="NETStandard.Library" version="2.0.3" targetFramework="net461" />
