--- a/Shopper2019.Logic/Shopper2019.Logic.csproj
+++ b/Shopper2019.Logic/Shopper2019.Logic.csproj
@@ -52,14 +52,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BusinessLogic.cs" />
     <Compile Include="BusinessLogicFolder\ISaleBusinessLogic.cs" />
     <Compile Include="BusinessLogicFolder\IStockBusinessLogic.cs" />
     <Compile Include="BusinessLogicFolder\SaleBusinessLogic.cs" />
     <Compile Include="BusinessLogicFolder\StockBusinessLogic.cs" />
-    <Compile Include="DependencyContainer.cs" />
-    <Compile Include="Factory.cs" />
-    <Compile Include="IBusinessLogic.cs" />
+    <Compile Include="DI_Container.cs" />
     <Compile Include="Models\IMeasurementsSort.cs" />
     <Compile Include="Models\ISaleItem.cs" />
     <Compile Include="Models\ISaleItemListModel.cs" />
