--- a/Shopper2019.DigitRecognizer/Shopper2019.DigitRecognizer.csproj
+++ b/Shopper2019.DigitRecognizer/Shopper2019.DigitRecognizer.csproj
@@ -53,6 +53,7 @@
   <ItemGroup>
     <Compile Include="DigitRecognizer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UnitNumberRecognize.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
