--- a/Shopper2019.DigitRecognizer/Shopper2019.DigitRecognizer.csproj
+++ b/Shopper2019.DigitRecognizer/Shopper2019.DigitRecognizer.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TeenNumberRecognize.cs" />
     <Compile Include="TenNumberRecognize.cs" />
+    <Compile Include="TousandNumberRecognize.cs" />
     <Compile Include="UnitNumberRecognize.cs" />
   </ItemGroup>
   <ItemGroup>
