--- a/Shopper2019.DigitRecognizer/Shopper2019.DigitRecognizer.csproj
+++ b/Shopper2019.DigitRecognizer/Shopper2019.DigitRecognizer.csproj
@@ -52,6 +52,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DigitRecognizer.cs" />
+    <Compile Include="EstimateNumberLength.cs" />
     <Compile Include="HundredNumerRecognize.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TeenNumberRecognize.cs" />
