invoiceDocument reorganise step2 in progress. app stable.

--- a/Shopper2019.Documents/Shopper2019.Documents.csproj
+++ b/Shopper2019.Documents/Shopper2019.Documents.csproj
@@ -88,6 +88,7 @@
       <DependentUpon>ReceiptDocument.cs</DependentUpon>
     </Compile>
     <Compile Include="Controllers\ReceiptProcessor.cs" />
+    <Compile Include="View\SignatureSpace.cs" />
     <EmbeddedResource Include="View\InvoiceDocument.resx">
       <DependentUpon>InvoiceDocument.cs</DependentUpon>
     </EmbeddedResource>
