--- a/Shopper2019.Documents/Shopper2019.Documents.csproj
+++ b/Shopper2019.Documents/Shopper2019.Documents.csproj
@@ -62,8 +62,10 @@
     <Compile Include="Controllers\IInvoiceProcessor.cs" />
     <Compile Include="Controllers\InvoiceProcessor.cs" />
     <Compile Include="DependencyContainer_Documents.cs" />
+    <Compile Include="DrawRow.cs" />
     <Compile Include="Factory.cs" />
     <Compile Include="IBusinessLogic_Documents.cs" />
+    <Compile Include="InvoiceSummaryProcessor.cs" />
     <Compile Include="Models\Buyer.cs" />
     <Compile Include="Models\IBuyer.cs" />
     <Compile Include="Models\IInvoice.cs" />
@@ -72,6 +74,9 @@
     <Compile Include="Models\IVendor.cs" />
     <Compile Include="Models\Receipt.cs" />
     <Compile Include="Models\Vendor.cs" />
+    <Compile Include="View\BankDetails.cs" />
+    <Compile Include="View\CommentSpace.cs" />
+    <Compile Include="View\InvoiceDetailHeader.cs" />
     <Compile Include="View\InvoiceDocument.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -81,6 +86,11 @@
     <Compile Include="Controllers\IReceiptProcessor.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="View\InvoiceHeader.cs" />
+    <Compile Include="View\InvoiceNumber.cs" />
+    <Compile Include="View\MainWorkFrame.cs" />
+    <Compile Include="View\PaymentDetails.cs" />
+    <Compile Include="View\ProductSignature.cs" />
     <Compile Include="View\ReceiptDocument.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -89,6 +99,9 @@
     </Compile>
     <Compile Include="Controllers\ReceiptProcessor.cs" />
     <Compile Include="View\SignatureSpace.cs" />
+    <Compile Include="View\TotalAmountProcessor.cs" />
+    <Compile Include="View\VendorAndBuyerDetail.cs" />
+    <Compile Include="View\VendorAndBuyerHeader.cs" />
     <EmbeddedResource Include="View\InvoiceDocument.resx">
       <DependentUpon>InvoiceDocument.cs</DependentUpon>
     </EmbeddedResource>
