--- a/Shopper2019.Documents/Shopper2019.Documents.csproj
+++ b/Shopper2019.Documents/Shopper2019.Documents.csproj
@@ -73,6 +73,7 @@
     <Compile Include="Models\IReceipt.cs" />
     <Compile Include="Models\IVendor.cs" />
     <Compile Include="Models\Receipt.cs" />
+    <Compile Include="Models\TaxSummary.cs" />
     <Compile Include="Models\Vendor.cs" />
     <Compile Include="View\BankDetails.cs" />
     <Compile Include="View\CommentSpace.cs" />
