add DI to invoiceDocument

--- a/Shopper2019.Documents/Shopper2019.Documents.csproj
+++ b/Shopper2019.Documents/Shopper2019.Documents.csproj
@@ -63,7 +63,7 @@
     <Compile Include="Controllers\InvoiceProcessor.cs" />
     <Compile Include="DependencyContainer_Documents.cs" />
     <Compile Include="DrawRow.cs" />
-    <Compile Include="Factory.cs" />
+    <Compile Include="DI_Container.cs" />
     <Compile Include="IBusinessLogic_Documents.cs" />
     <Compile Include="InvoiceSummaryProcessor.cs" />
     <Compile Include="Models\Buyer.cs" />
